# cgx-project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.1ab916f  README.md  README_M2.md  README_M3.md  Report2.md  readme.txt
codeArchives/: gerstnerWavesShader.txt
common/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  check_error_gl.h  icg_helper.h  icg_settings.cmake
main/: CMakeLists.txt  README_M3.md  frame_counter.h  framebuffer.h  framebufferRGBA.h  gridmesh.h  infinite_grid.h  iocallbacks.h  large_scene.h  main.cpp  scene.h  scene_controler.h  trackball.h  utils.h
main/bezier/: BezierCurve.h
main/blurQuad/: blurquad.h  blurquad_fshader.glsl
main/camera/: camera.h  fractionalview.h
main/grass/: grass.h  grassAlpha.tga  grass_fshader.glsl  grass_vshader.glsl
main/grid/: grid.h  grid_fshader.glsl  grid_fshader_debug.glsl  grid_gshader_debug.glsl  grid_tcshader.glsl  grid_tcshader_debug.glsl  grid_teshader.glsl  grid_teshader_debug.glsl  grid_vshader.glsl
main/grid/debug/: grid_fshader_debug.glsl  grid_teshader_debug.glsl
main/grid/shadow/: grid_fshader_shadow.glsl  grid_tcshader_shadow.glsl  grid_teshader_shadow.glsl
main/light/: light.h  lightable.h
main/material/: material.h
main/model/: mesh.h  model.h
main/model/yacht/: yacht.3ds  yacht_fshader.glsl  yacht_tex.tga  yacht_vshader.glsl
main/normalmap/: normalmap.h  normalmap_fshader.glsl  normalmap_vshader.glsl
main/perlin/: perlin.h  perlin3D_fshader.glsl  perlinGrass_fshader.glsl  perlin_fshader.glsl  perlin_texture.h  perlin_vshader.glsl  variations_fshader.glsl
main/screenquad/: cloudPlane_fshader.glsl  cloudPlane_vshader.glsl  screenquad.h  screenquad_fshader.glsl  screenquad_vshader.glsl
main/skyDome/: cloud1024.tga  skyDome.h  skyDome_fshader.glsl  skyDome_vshader.glsl  skyPlane.h  skyPlane_fshader.glsl  skyPlane_vshader.glsl
main/skybox/: skybox.h  skybox_fshader.glsl
main/terrain/: terrain.h  terrain_fshader.glsl  terrain_tcshader.glsl  terrain_teshader.glsl  terrain_vshader.glsl
main/terrain/debug/: terrain_fshader_debug.glsl  terrain_gshader_debug.glsl  terrain_tcshader_debug.glsl  terrain_teshader_debug.glsl  terrain_vshader_debug.glsl
main/terrain/shadow/: terrain_tcshader_shadow.glsl  terrain_teshader_shadow.glsl  terrain_vshader_shadow.glsl
main/terrain/textures/: grass512.tga  grassbis512.tga  ground.tga  rock512.tga  rock512_2.tga  rock512_3.tga  rock512_4.tga  sand256.tga  snow512.tga
main/water/: water.h  waterColorTexture.tga  waterNormalMap.tga  waterNormalMap2.tga  waterNormalMap2_256.tga  waterNormalMap2_perlinStretch.tga  waterNormalMap3_perlinStretch.tga  waterNormalMap4_perlinStretch.tga  waterNormalMap_custom.tga  waterNormalMap_perlinNoStretch.tga  waterNormalMap_perlinStretch.tga  water_fshader.glsl  water_fshader_blur.glsl  water_gshader_debug.glsl  water_tcshader.glsl  water_tcshader_debug.glsl  water_teshader.glsl  water_teshader_debug.glsl  water_vshader.glsl  water_vshader_blur.glsl  water_vshader_debug.glsl
main/water/debug/: water_fshader_debug.glsl  water_gshader_debug.glsl  water_tcshader_debug.glsl  water_teshader_debug.glsl  water_vshader_debug.glsl
